...
            .view(title: "Notifications Playground", { _ in
                LocalNotificationsPlaygroundView()
            }),

            // MARK: Controllers
            .controller(title: "Image Cache", { d in
                let storyboard = UIStoryboard(name: "Debug", bundle: nil)
                return storyboard.instantiateViewController(identifier: "ImageCacheDebugViewController") { coder in
                    ImageCacheDebugViewController(coder: coder,
                                                  bookmarksDatabase: d.bookmarksDatabase,
                                                  tabsModel: d.tabManager.model,
                                                  fireproofing: d.fireproofing)
                }
            }),
            .controller(title: "Sync", { d in
                let storyboard = UIStoryboard(name: "Debug", bundle: nil)
                return storyboard.instantiateViewController(identifier: "SyncDebugViewController") { coder in
                    SyncDebugViewController(coder: coder,
                                            sync: d.syncService,
                                            bookmarksDatabase: d.bookmarksDatabase)
                }
...
