...
                                                <outlet property="trackers3Animation" destination="E8n-8r-JML" id="txQ-Qp-gP8"/>
                                            </connections>
                                        </view>
                                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" adjustsFontSizeToFit="NO" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="fqM-N4-jNd" customClass="TextFieldWithInsets" customModule="DuckDuckGo" customModuleProvider="target"
                                            <rect key="frame" x="30" y="0.0" width="221" height="40"/>
                                            <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                            <accessibility key="accessibilityConfiguration" identifier="searchEntry">
                                                <accessibilityTraits key="traits" searchField="YES"/>
                                                <bool key="isElement" value="YES"/>
                                            </accessibility>
                                            <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                            <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                            <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" keyboardType="webSearch" smartQuotesType="no"/>
...
                                    <connections>
                                        <action selector="onClearButtonPressed:" destination="ojX-nM-dyN" eventType="touchUpInside" id="khX-3z-LQK"/>
                                    </connections>
                                </button>
                                <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" reversesTitleShadowWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Qea-QY-LVl">
                                    <rect key="frame" x="341" y="7" width="46" height="26"/>
                                    <accessibility key="accessibilityConfiguration" label="Refresh Page"/>
                                    <constraints>
                                        <constraint firstAttribute="width" priority="900" constant="46" id="PHR-dd-ThY"/>
                                    </constraints>
                                    <state key="normal" image="person.bubble" catalog="system"/>
                                    <connections>
                                        <action selector="onRefreshPressed:" destination="ojX-nM-dyN" eventType="touchUpInside" id="4Dg-IX-SdK"/>
...
