...
                                        <connections>
                                            <action selector="goForwardAction:" target="o2v-eH-jTI" id="aht-fm-Fhd"/>
                                        </connections>
                                    </button>
                                    <button tag="2" translatesAutoresizingMaskIntoConstraints="NO" id="B2U-XM-Vo0" customClass="MouseOverButton" customModule="DuckDuckGo_Privacy_Browser" customModuleProvider="target">
                                        <rect key="frame" x="64" y="0.0" width="32" height="32"/>
                                        <buttonCell key="cell" type="square" bezelStyle="shadowlessSquare" image="Refresh" imagePosition="only" alignment="center" imageScaling="proportionallyDown" inset="2" id="T7v-4A-Zm2">
                                            <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                            <font key="font" metaFont="system"/>
                                        </buttonCell>
                                        <color key="contentTintColor" name="ButtonColor"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="32" id="Jkc-qJ-YzZ"/>
...
