/* Buton label for Edit action */
"action.generic.edit" = "Edit";

/* Button label for a generic show action */
...

/* Confirmation of Add to Bookmarks action in Add All Open Tabs to Bookmarks alert */
"action.title.bookmark" = "Bookmark";

/* Button: Open bookmarks list */
"action.title.bookmarks" = "Bookmarks";

/* Cancel action - button shown in alert */
"action.title.cancel" = "Cancel";

/* Copy action */
...

/* Delete action - button shown in alert */
"action.title.delete" = "Delete";

/* Disable protection action */
...

/* Open AI Chat action in the menu list */
"action.title.duckai" = "Duck.ai";

/* Edit Bookmark action */
...

/* No comment provided by engineer. */
"action.title.forgetAll" = "Close Tabs and Clear Data";

/* Confirmation message */
...

/* Save action - button shown in alert */
"action.title.save" = "Save";

/* Add to Bookmarks action */
...

/* Settings action */
"action.title.settings" = "Settings";

/* Share action */
...

/* New tab menu item opening a new tab */
"action.title.tab.new" = "New Tab";

/* Settings label for bottom position for the address bar */
...

/* Settings screen title for AI features */
"ai-features.settings.title" = "AI Features";

/* No comment provided by engineer. */
...

/* No comment provided by engineer. */
"autoclear.off" = "Off";

/* No comment provided by engineer. */
...

/* Text link to email protection website */
"autofill.enable.email.protection" = "Enable Email Protection";

/* Accessibility title for a Hide CVV button replacing displayed credit card CVV (security code) with *** */
...

/* Add folder screen title */
"bookmark.addFolder.title" = "Add Folder";

/* Add bookmark folder button text */
...

/* Button on the last screen of the onboarding, it will dismiss the onboarding screen. */
"contextual.onboarding.final-screen.button" = "High five!";

/* Title of the last screen of the onboarding to the browser app */
"contextual.onboarding.final-screen.title" = "You’ve got this!";

/* During onboarding steps this button is shown and takes either to the next steps or closes the onboarding. */
...

/* Title of a popover on the browser that invites the user to try a visiting a website */
"contextual.onboarding.try-a-site.title" = "Next, try visiting a site!";

/* Message of a popover on the browser that invites the user to try visiting the browser Fire Button. Please leave the line break */
...

/* Title of button to dismiss the screen */
"data.import.summary.button.title.done" = "Done";

/* Title of button to prompt users to sync and back up their imported data. Reads as 'Sync & Back Up Passwords | Bookmarks | Data' depending on what the user has chosen to import */
...

/* Alert action for starting a file dowload */
"downloads.alert.action.save-to-downloads" = "Save to Downloads";

/* Cancel download action for downloads */
...

/* Message explaining to the user that Duck Player is not available */
"duck-player.video-contingency-message" = "Duck Player's functionality has been affected by recent changes to YouTube. We’re working to fix these issues and appreciate your understanding.";

/* AI features settings explanation */
...

/* Email protection service offered by DuckDuckGo */
"email-protection" = "Email Protection";

/* Cancel option for the email alias alert */
...

/* Empty list state placeholder title */
"empty.bookmarks" = "No bookmarks added yet";

/* Empty list state placeholder subtitle */
...

/* Confirmation button */
"feedback.form.submit" = "Submit";

/* Title of the feedback form */
...

/* No comment provided by engineer. */
"keyCommandBrowserBack" = "Browse Back";

/* No comment provided by engineer. */
"keyCommandBrowserForward" = "Browse Forward";

/* No comment provided by engineer. */
...

/* No comment provided by engineer. */
"menu.button.hint" = "Browsing Menu";

/* Title for back button in navigation bar */
...

/* The title of the notifications shown from VPN */
"network.protection.notification.title" = "DuckDuckGo";

/* Title text for an iOS quick action that opens VPN settings */
...

/* Confirm fireproofing action */
"preserveLogins.menu.confirm" = "Fireproof";

/* Parameter is a website URL. Messege confirms that given website has been fireproofed. */
...

/* Disable fireproofing for site */
"preserveLogins.menu.disable" = "Remove Fireproofing";

/* Enable fireproofing for site */
"preserveLogins.menu.enable" = "Fireproof This Site";

/*  Messege confirms that website is no longer fireproofed. */
...

/* Tab Switcher Accessibility Label */
"tab.switcher.accessibility.label" = "Tab Switcher";

/* Bookmark all tabs menu item */
"tab.switcher.bookmarkAll" = "Bookmark All Tabs";

/* Description text for the text size adjustment setting */
...
