...
                    <view key="view" id="1se-D0-4zU" customClass="ColorView" customModule="DuckDuckGo_Privacy_Browser" customModuleProvider="target">
                        <rect key="frame" x="0.0" y="0.0" width="320" height="363"/>
                        <autoresizingMask key="autoresizingMask"/>
                        <subviews>
                            <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="vOP-zm-6FL">
                                <rect key="frame" x="14" y="10" width="292" height="40"/>
                                <buttonCell key="cell" type="push" title="Got It!" bezelStyle="rounded" alignment="center" controlSize="large" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="K9v-mN-Am9">
                                    <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                    <font key="font" metaFont="system"/>
                                    <string key="keyEquivalent" base64-UTF8="YES">
DQ
</string>
                                </buttonCell>
...
