...
        }

        barsHandler.deselectAllButton.primaryAction = action(UserText.deselectAllTabs) { [weak self] in
            self?.deselectAllTabs()
        }

        barsHandler.menuButton.accessibilityLabel = "More Menu"
        barsHandler.menuButton.image = DesignSystemImages.Glyphs.Size24.moreApple
        barsHandler.menuButton.tintColor = UIColor(designSystemColor: .icons)
        barsHandler.menuButton.menu = createMultiSelectionMenu()
        barsHandler.menuButton.isEnabled = canShowSelectionMenu

        barsHandler.closeTabsButton.isEnabled = selectedTabs.count > 0
...
