appId: com.duckduckgo.mobile.ios
tags:
    - iphone
    - securityTest
---

# Set up 
- runFlow: 
    file: ../shared/setup.yaml

# Load Site
- assertVisible:
    id: "searchEntry"
- tapOn: 
    id: "searchEntry"
- inputText: "https://privacy-test-pages.site/security/address-bar-spoofing/spoof-application-scheme.html"
- pressKey: Enter

# Test
- tapOn: "Start"
# This will try to open another app
- assertVisible: "Cancel"
- tapOn: "Cancel"
- copyTextFrom:
    id: "searchEntry"
- assertTrue: ${maestro.copiedText == "privacy-test-pages.site"} 
- assertNotVisible: "Not DDG." # HTML content shouldn't be spoofed.
- tapOn:
    id: "searchEntry"
# Test 2
- inputText: "https://privacy-test-pages.site/security/address-bar-spoofing/spoof-unsupported-scheme.html"
- pressKey: Enter
- tapOn: "Start"
# This will try to open another app
- assertVisible: "Cancel"
- tapOn: "Cancel"
- copyTextFrom:
    id: "searchEntry"
- assertTrue: ${maestro.copiedText == "privacy-test-pages.site"}
