appId: com.duckduckgo.mobile.ios
tags:
    - iphone
    - privacy

---

# Set up 
- runFlow: 
    file: ../shared/setup.yaml

# Load Site
- assertVisible:
    id: "searchEntry"
- tapOn: 
    id: "searchEntry"
- inputText: "privacy blogs"
- pressKey: Enter

# Change settings
- tapOn: "Safe search"
- tapOn: "Off"

# Fire Button - twice, just to be sure
- tapOn: "Close Tabs and Clear Data"
- tapOn:
    id: "alert.forget-data.confirm"
- assertVisible:
    id: "searchEntry"
- runFlow:
    when:
        visible: "Cancel"
    commands:
        - tapOn: "Cancel"
- tapOn: "Close Tabs and Clear Data"
- tapOn:
    id: "alert.forget-data.confirm"

# Validate Cookie was retained
- tapOn: 
    id: "searchEntry"
- inputText: "creepy trackers"
- pressKey: Enter
- assertVisible: "Safe search: off"
